--- a/src/AdminPanel/public/assets/css/main.css
+++ b/src/AdminPanel/public/assets/css/main.css
@@ -49,8 +49,13 @@ html.white-theme {
     border: none;
     transition: all 0.3s ease;
 }
-.btn-primary:hover {
+.btn-primary:hover, html.dark-theme .btn-secondary:hover {
     opacity: .7;
+}
+html.dark-theme .btn-secondary {
+    background-color: rgba(255,255,255,.08) !important;
+    border: none;
+    transition: all 0.3s ease;
 }
 .text-danger {
     color: var(--bs-danger) !important;
@@ -69,7 +74,7 @@ html.dark-theme .nav-pills .nav-link:hover {
 }
 html.white-theme .nav-pills .nav-link.active, .nav-tabs .nav-link.active {
     background-color: rgba(0,0,0, .1) !important;
-    color: var(--bs-blue) !important;
+    color: var(--ui-accent) !important;
 }
 html.dark-theme .nav-pills .nav-link.active, .nav-tabs .nav-link.active {
     background-color: var(--ui-main) !important;
@@ -127,6 +132,14 @@ html.dark-theme .btn.disabled, .btn:disabled, fieldset:disabled .btn {
 html.white-theme .form-switch .form-check-input {
     border-width: 2px;
 }
+html.white-theme .form-switch .form-check-input:focus {
+    border-color: rgba(0,0,0,.2);
+    box-shadow: none;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba(0,0,0,.2)'/%3e%3c/svg%3e");
+}
+html.white-theme .form-switch .form-check-input:checked:focus {
+    border-color: rgba(0,0,0,.0);
+}
 html.dark-theme .form-switch .form-check-input {
     background-color: var(--ui-main);
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba(255, 255, 255, 0.3)'/%3e%3c/svg%3e");
@@ -151,18 +164,18 @@ html.dark-theme .form-switch .form-check-input::after {
     opacity: .0;
     z-index: -1;
 }
-html.dark-theme .form-switch .form-check-input:focus::after {
+html .form-switch .form-check-input:focus::after {
     opacity: .05;
 }
-html.dark-theme .form-switch .form-check-input:checked:focus::after {
+html .form-switch .form-check-input:checked:focus::after {
     box-shadow: 0px 0px 0px 4px var(--ui-accent);
     opacity: .3;
 }
-html.dark-theme .form-switch .form-check-input:checked {
+html .form-switch .form-check-input:checked {
     opacity: 1;
     background-color: var(--ui-accent);
     border: 2px solid rgba(255, 255, 255, 0);
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba(255, 255, 255, 0.8)'/%3e%3c/svg%3e");
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba(255, 255, 255, 0.8)'/%3e%3c/svg%3e") !important;
 }
 .form-switch {
     display: flex;
