--- a/src/AdminPanel/public/assets/css/cabinet.css
+++ b/src/AdminPanel/public/assets/css/cabinet.css
@@ -274,42 +274,9 @@ html.white-theme .cabinet .theme-switch .theme-wrapper.inactive.dark:hover .them
     margin: 0;
     margin-left: 10px;
 }
-.cabinet .theme-switch .theme .particle {
-    border-radius: 7px;
-}
-.cabinet .theme-switch .theme-wrapper.dark .theme .particle {
-    background-color: rgb(43, 43, 43);
-    box-shadow: 2.5px 2.5px 5px 0px rgba(0,0,0,.03);
-}
-.cabinet .theme-switch .theme-wrapper.white .theme .particle {
-    background-color: rgb(224, 223, 223);
-    box-shadow: 2.5px 2.5px 5px 0px rgba(0,0,0,.03);
-}
-.cabinet .theme-switch .theme-wrapper .particle-2 {
+.cabinet .theme-switch .theme-wrapper.active:hover {
     opacity: .8;
-}
-.cabinet .theme-switch .theme-wrapper .particle-3 {
-    opacity: .6;
-}
-.cabinet .theme-switch .theme .particle.big {
-    width: 60px;
-    height: 100%;
-}
-.cabinet .theme-switch .theme .particle-rows {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    box-sizing: border-box;
-    opacity: .6;
-}
-.cabinet .theme-switch .theme .particle.row {
-    width: 100%;
-    box-sizing: border-box;
-    margin-left: 10px;
-    margin-right: 2.5px;
-    height: 10px;
+    cursor: default;
 }
 .cabinet .theme-switch {
     display: flex;
