--- a/src/AdminPanel/App-root/public/assets/dev/css/cabinet.css
+++ b/src/AdminPanel/App-root/public/assets/dev/css/cabinet.css
@@ -2,6 +2,12 @@ body, html {
     width: 100%;
     height: 100%;
 }
+.btn, input.form-control {
+    border-radius: 8px;
+    padding-left: 15px;
+    padding-right: 15px;
+    box-sizing: border-box;
+}
 .cabinet {
     width: 100%;
     height: 100%;
@@ -15,8 +21,8 @@ body, html {
     position: relative;
 }
 .cabinet .sidebar-wrapper {
-    width: 250px;
-    min-width: 250px;
+    width: 260px;
+    min-width: 260px;
     padding: 5px;
     box-sizing: border-box;
 }
@@ -50,13 +56,17 @@ html.dark-theme .cabinet .sidebar-wrapper {
     align-items: center;
     padding: 10px;
     margin: 5px;
-    border-radius: 5px;
+    border-radius: 8px;
     box-sizing: border-box;
     border: none;
     width: calc(100% - 10px);
     transition: all 0.3s ease;
     background-color: transparent !important;
     opacity: 0.8;
+}
+.cabinet .sidebar-wrapper .list-group-item i {
+    margin-left: 5px;
+    margin-right: 10px;
 }
 html.dark-theme .sidebar-wrapper .list-group-item {
     color: #fff !important;
@@ -457,7 +467,7 @@ html .cabinet .settings-page .search-bar .input-wrapper {
 html .cabinet .settings-page .search-bar .input-wrapper input {
     width: 100%;
     text-align: center;
-    border-radius: 5px;
+    border-radius: 10px;
     border: none;
     padding: 7px;
     box-sizing: border-box;
@@ -513,7 +523,7 @@ html .cabinet .settings-page .search-bar .input-wrapper button:disabled {
 }
 html .cabinet .settings-page .search-results {
     position: fixed;
-    left: 235px;
+    left: 245px;
     right: 0;
     margin: auto;
     top: 160px;
@@ -522,7 +532,7 @@ html .cabinet .settings-page .search-results {
     min-height: 80px;
     max-width: 500px;
     max-height: 500px;
-    border-radius: 5px;
+    border-radius: 10px;
     backdrop-filter: blur(30px);
     box-shadow: 0px 10px 20px 0px rgb(0 0 0 / 20%);
     padding: 20px;
@@ -530,6 +540,9 @@ html .cabinet .settings-page .search-results {
     overflow-y: auto;
     overflow-x: hidden;
     transition: all 0.2s ease;
+}
+html .cabinet .settings-page .search-results::-webkit-scrollbar {
+    border-radius: 0 10px 10px 0;
 }
 html .cabinet .settings-page .search-results.faded {
     transform: translateY(-10px);
@@ -551,10 +564,67 @@ html .cabinet .settings-page .search-results .items {
 html .cabinet .settings-page .search-results .search-result {
     width: calc(100% - 10px);
     margin: 5px;
-    border-radius: 5px;
+    border-radius: 10px;
     box-sizing: border-box;
     padding: 20px;
     transition: all 0.3s ease;
+    display: flex;
+    align-items: center;
+}
+html .cabinet .settings-page .search-results .search-result .icon {
+    width: 56px;
+    height: 56px;
+    border-radius: 100%;
+    background-color: var(--ui-accent);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 200;
+    margin-right: 15px;
+    position: relative;
+}
+
+html .cabinet .settings-page .search-results .search-result .icon.color-0 {
+    background-color: var(--bs-blue);
+}
+html .cabinet .settings-page .search-results .search-result .icon.color-1 {
+    background-color: var(--bs-purple);
+}
+html .cabinet .settings-page .search-results .search-result .icon.color-2 {
+    background-color: var(--bs-pink);
+}
+html .cabinet .settings-page .search-results .search-result .icon.color-3 {
+    background-color: var(--bs-yellow);
+}
+html .cabinet .settings-page .search-results .search-result .icon.color-4 {
+    background-color: var(--bs-gray);
+}
+html .cabinet .settings-page .search-results .search-result .icon.color-5 {
+    background-color: var(--bs-teal);
+}
+html .cabinet .settings-page .search-results .search-result .icon.color-6 {
+    background-color: var(--bs-red);
+}
+html .cabinet .settings-page .search-results .search-result .icon.color-7 {
+    background-color: var(--bs-indigo);
+}
+html .cabinet .settings-page .search-results .search-result .icon.color-8 {
+    background-color: var(--bs-orange);
+}
+html .cabinet .settings-page .search-results .search-result .icon.color-9 {
+    background-color: var(--bs-gray);
+}
+
+html .cabinet .settings-page .search-results .search-result .icon::after {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
+    content: '';
+    background: linear-gradient(180deg, rgba(255,255,255,0.2) 0%, rgba(255,255,255,0) 100%);
 }
 html.dark-theme .cabinet .settings-page .search-results .search-result {
     background-color: rgba(255,255,255,.05);
