--- a/src/AdminPanel/App-root/public/assets/dev/css/main.css
+++ b/src/AdminPanel/App-root/public/assets/dev/css/main.css
@@ -58,22 +58,31 @@ html.white-theme pre .language-css .token.string, .style .token.string, .token.e
 }
 html.dark-theme {
     --ui-text: white;
-    --ui-background: #060606;
-    --ui-item-background-low: #070707;
-    --ui-item-background-mid: #111;
-    --ui-item-background-mid-high: #222;
-    --ui-item-background-high: #333;
+    --ui-background: hsl(216, 28%, 3%);
+    --ui-item-background-low-min: hsl(216, 28%, 3.2%);
+    --ui-item-background-low: hsl(216, 28%, 3.8%);
+    --ui-item-background-mid: hsl(216, 28%, 6%);
+    --ui-item-background-mid-high:hsl(216, 28%, 10%);
+    --ui-item-background-high: hsl(216, 28%, 20%);
+    --ui-item-background-high-max: hsl(216, 28%, 40%);
 
-    --ui-main: rgba(255,255,255,.1);
-    --ui-preloader-color: rgba(255,255,255,1);
+    --ui-item-background-overlay: hsla(216, 28%, 8%, .4);
+
+    --ui-main: var(--ui-item-background-mid-high);
+    --ui-preloader-color: rgba(255,255,255,.5);
 }
 html.white-theme {
     --ui-text: black;
     --ui-background: white;
-    --ui-item-background-low: rgb(250, 250, 250);
+    --ui-item-background-low-min: rgb(252, 252, 252);
+    --ui-item-background-low: rgb(245, 245, 245);
     --ui-item-background-mid: rgb(240, 240, 240);
     --ui-item-background-mid-high: rgb(220, 220, 220);
     --ui-item-background-high: rgb(200, 200, 200);
+    --ui-item-background-high-max: rgb(190, 190, 190);
+
+    --ui-item-background-overlay: rgba(225, 225, 225, .5);
+
     --ui-main: var(--ui-accent);
     --ui-preloader-color: var(--ui-accent);
 }
@@ -103,7 +112,7 @@ html .nav-pills .nav-item {
     margin: 5px;
 }
 html.dark-theme .nav-pills .nav-link:hover {
-    background-color: rgba(255, 255, 255, 0.05);
+    background-color: var(--ui-item-background-mid);
 }
 html.white-theme .nav-pills .nav-link.active, .nav-tabs .nav-link.active {
     background-color: rgba(0,0,0, .1) !important;
@@ -148,6 +157,10 @@ input.form-control {
     background-color: var(--bs-light) !important;
     color: var(--bs-dark) !important;
 }
+html.white-theme input.form-control:focus {
+    border-color: var(--ui-item-background-mid-high);
+    box-shadow: none !important;
+}
 .form-switch {
     display: flex;
     align-items: center;
@@ -186,6 +199,18 @@ html.dark-theme .form-check-input::after {
 
 html .form-check-input:checked::after {
     box-shadow: 0 0 0 0px var(--ui-accent);
+}
+
+html.dark-theme .form-check-input {
+    box-shadow: 0 5px 10px -8px rgba(255,255,255,.0) !important;
+}
+
+html.white-theme .form-check-input {
+    box-shadow: 0 5px 10px -8px rgba(0,0,0,.2) !important;
+}
+
+html .form-check-input:checked {
+    box-shadow: 0 5px 10px -8px var(--ui-accent) !important;
 }
 
 html.white-theme .form-check-input:focus::after {
@@ -274,6 +299,7 @@ html.white-theme ::-webkit-scrollbar-thumb:hover {
 }
 .btn {
     position: relative;
+    box-shadow: 0 5px 15px -10px var(--ui-main);
 }
 .btn::after {
     position: absolute;
